<resources>
    <string name="app_name">MissingCatsv2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="cat_list_fragment_label">Missing Cats</string>
    <string name="single_cat_fragment_label">Single Cat</string>
    <string name="create_cat_fragment_label">Report Lost Cat</string>
    <string name="log_in_fragment_label">Log in or create user</string>
    <string name="button_go_to_single_cat_fragment_label">Go to Single cat fragment</string>
    <string name="button_back_to_cat_list_fragment_label">Back to Cat list fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="email_icon_content_description">email icon</string>
    <string name="button_go_to_log_in_create_user_fragment_label">Go to Log in/Create user</string>
    <string name="single_cat_textview_placeholder">Her er der en kat</string>
    <string name="single_cat_imageview_placeholder">This is the cat</string>
    <string name="missing_cat_headline">Missing Cat</string>
    <string name="single_cat_card_placeholder">Some text</string>
    <string name="log_out_menu_item_label">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>