<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.SingleCatFragment">

    <TextView
        android:id="@+id/cat_presentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_cat_textview_placeholder"
        android:clickable="true"
        android:textSize="26dp">
    </TextView>

    <ImageView
        android:id="@+id/cat_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/single_cat_imageview_placeholder"
        >
    </ImageView>


    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_delete_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DELETE THIS CAT"
        android:visibility="gone">

    </Button>

    <Button
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back_to_cat_list_fragment_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />
</LinearLayout>