<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CatListFragment">

    <fragment
        android:id="@+id/CatListFragment"
        android:name="com.example.missingcatsv2.Fragments.CatListFragment"
        android:label="@string/cat_list_fragment_label"
        tools:layout="@layout/fragment_cat_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SingleCatFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_logInFragment"
            app:destination="@id/LogInFragment" />
        <action
            android:id="@+id/action_CatListFragment_to_createCatFragment"
            app:destination="@id/createCatFragment" />
    </fragment>
    <fragment
        android:id="@+id/SingleCatFragment"
        android:name="com.example.missingcatsv2.Fragments.SingleCatFragment"
        android:label="@string/single_cat_fragment_label"
        tools:layout="@layout/fragment_single_cat">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/CatListFragment" />
        <argument
            android:name="Position"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/LogInFragment"
        android:name="com.example.missingcatsv2.LogInFragment"
        android:label="@string/log_in_fragment_label"
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_logInFragment_to_FirstFragment"
            app:destination="@id/CatListFragment" />
    </fragment>
    <fragment
        android:id="@+id/createCatFragment"
        android:name="com.example.missingcatsv2.CreateCatFragment"
        android:label="fragment_create_cat"
        tools:layout="@layout/fragment_create_cat" >
        <action
            android:id="@+id/action_createCatFragment_to_CatListFragment"
            app:destination="@id/CatListFragment" />
    </fragment>
</navigation>